--- a/contato.html
+++ b/contato.html
@@ -24,45 +24,49 @@
         <h2>Mande sua mensagem:</h2>
         <form>
           <label for="nome">Nome:</label><br />
-          <input type="text" id="nome" />
-          <br />
-          <br />
+          <input type="text" id="nome" onkeyup="validaNome()"/>
+          <div id="txtNome"></div>
+          <br>
           <label for="email">Email:</label><br />
-          <input type="email" id="email" />
-          <br /><br />
+          <input type="email" id="email" onkeyup="validaEmail()"/>
+          <div id="txtEmail"></div>
+          <br>
           <label for="assunto">Assunto:</label><br />
-          <textarea name="assunto" id="assunto" cols="60" rows="10"></textarea>
-          <br /><br />
-          <button>Enviar</button>
+          <textarea name="assunto" id="assunto" cols="60" rows="10" onkeyup="validaAssunto()"></textarea>
+          <div id="txtAssunto"></div>
+          <br><br>
+          <button onclick="enviar()">Enviar</button>
         </form>
       </div>
       <div class="ml-50">
         <h2>Um lugar que gosto:</h2>
   
-      <p>Av. Afonso de Sampaio e Sousa, 951, São Paulo - SP</p>
+        <p>Av. Afonso de Sampaio e Sousa, 951, São Paulo - SP</p>
   
-      <iframe class="mb-30"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.9463637330796!2d-46.471235785817136!3d-23.57036976780836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce66573fb820c7%3A0x96934119af268cc!2sAv.%20Afonso%20de%20Sampaio%20e%20Sousa%2C%20951%20-%20Itaquera%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2008275-025!5e0!3m2!1spt-BR!2sbr!4v1644464603565!5m2!1spt-BR!2sbr"
-        width="400"
-        height="300"
-        style="border: 0"
-        allowfullscreen=""
-        loading="lazy"
-      >
-      </iframe>
+        <iframe class="mb-30"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.9463637330796!2d-46.471235785817136!3d-23.57036976780836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce66573fb820c7%3A0x96934119af268cc!2sAv.%20Afonso%20de%20Sampaio%20e%20Sousa%2C%20951%20-%20Itaquera%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2008275-025!5e0!3m2!1spt-BR!2sbr!4v1644464603565!5m2!1spt-BR!2sbr"
+          width="400"
+          height="300"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          id="mapa"
+          onmousemove="mapaZoom()"
+          onmouseout="mapaNormal()"
+        ></iframe>
       </div>
     </div>
     
     <footer class="bg-e">
       <div class="container">
         <a href="https://github.com/JuliaInoscencia" target="_blank">
-          <img class="tm-social p-20" src="assets/github.png" alt="Logo do github">
+          <img class="tm-social p-20" src="assets/img/github.png" alt="Logo do github">
         </a>
         <a href="https://www.instagram.com/thehobbiti/" target="_blank">
-          <img class="tm-social p-20" src="assets/instagram.png" alt="Logo do instagram">
+          <img class="tm-social p-20" src="assets/img/instagram.png" alt="Logo do instagram">
         </a>
         <a href="https://www.linkedin.com/in/juliainoscencia/" target="_blank">
-          <img class="tm-social p-20" src="assets/linkedin.png" alt="Logo do linkedin">
+          <img class="tm-social p-20" src="assets/img/linkedin.png" alt="Logo do linkedin">
         </a>
       </div>
       
@@ -72,5 +76,7 @@
         </p>
       </div>
     </footer>
+
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
