--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     <footer class="bg-e">
       <div class="container">
         <a href="https://github.com/JuliaInoscencia" target="_blank">
-          <img class="tm-social p-20" src="assets/github.png" alt="Logo do github">
+          <img class="tm-social p-20" src="assets/img/github.png" alt="Logo do github">
         </a>
         <a href="https://www.instagram.com/thehobbiti/" target="_blank">
-          <img class="tm-social p-20" src="assets/instagram.png" alt="Logo do instagram">
+          <img class="tm-social p-20" src="assets/img/instagram.png" alt="Logo do instagram">
         </a>
         <a href="https://www.linkedin.com/in/juliainoscencia/" target="_blank">
-          <img class="tm-social p-20" src="assets/linkedin.png" alt="Logo do linkedin">
+          <img class="tm-social p-20" src="assets/img/linkedin.png" alt="Logo do linkedin">
         </a>
       </div>
       
